Added new HTML5 charts and fixed javascript

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         }
     ],
     "require": {
-        "catfan/Medoo": "^0.9.8"
+        "catfan/Medoo": "^0.9.8",
+        "nnnick/chartjs": "dev-master"
     }
 }
