--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,1 @@
-composer.phar
-vendor/
-secrets.php
-providers.sql
-
-# Commit your application's lock file http://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file
-# You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
-# composer.lock
+*.pyc
